--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,5 @@
 body,
-html {
-  font-family: "Open Sans", sans-serif;
-  text-rendering: optimizeLegibility !important;
-  -webkit-font-smoothing: antialiased !important;
-  color: #777;
-  font-weight: 400;
-  width: 100% !important;
-  height: 100% !important;
-}
+
 h2,
 h3,
 h4 {
@@ -36,30 +28,17 @@ h5 {
   line-height: 20px;
 }
 p {
-  font-size: 15px;
+  font-size: 25px;
+  
 }
 p.intro {
   margin: 12px 0 0;
   line-height: 24px;
 }
-a {
-  color: #608dfd;
-  font-weight: 400;
-}
-a:hover,
-a:focus {
-  text-decoration: none;
-  color: #608dfd;
-}
+
 ul,
 ol {
   list-style: none;
-}
-ul,
-ol {
-  padding: 0;
-  webkit-padding: 0;
-  moz-padding: 0;
 }
 hr {
   height: 2px;
@@ -72,25 +51,25 @@ hr {
 }
 /* Navigation */
 #menu {
-  padding: 15px;
+  padding: 12px;
   transition: all 0.8s;
 }
 #menu.navbar-default {
-  background-color: #fff;
-  border-color: rgba(231, 231, 231, 0);
+  background-color: #ffffff;
+  border-color: rgba(246, 245, 245, 0);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
 #menu a.navbar-brand {
   font-family: "Raleway", sans-serif;
   font-size: 24px;
   font-weight: 700;
-  color: #333;
+  color: #1b4332;
   text-transform: uppercase;
 }
 #menu.navbar-default .navbar-nav > li > a {
   font-family: "Lato", sans-serif;
   text-transform: uppercase;
-  color: #555;
+  color: #1b4332;
   font-size: 15px;
   font-weight: 400;
   padding: 8px 2px;
@@ -104,7 +83,7 @@ hr {
   bottom: -1px;
   width: 0;
   height: 2px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  background: linear-gradient(to right, #3a5a40 0%, #344e41 100%);
   content: "";
   transition: width 0.2s;
 }
@@ -125,7 +104,7 @@ hr {
   bottom: -1px !important;
   width: 100% !important;
   height: 2px !important;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%) !important;
+  background: linear-gradient(to right,  #2d6a4f 0%, #1b4332 100%) !important;
   content: "" !important;
   transition: width 0.2s !important;
 }
@@ -135,10 +114,10 @@ hr {
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background-color: #fff;
-  border-color: #608dfd;
+  border-color: #1b4332;
 }
 .navbar-default .navbar-toggle:hover > .icon-bar {
-  background-color: #608dfd;
+  background-color: #1b4332;
 }
 .section-title {
   margin-bottom: 70px;
@@ -152,7 +131,7 @@ hr {
 .section-title h2::after {
   position: absolute;
   content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background: linear-gradient(to right,  #2d6a4f 0%, #1b4332 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -166,8 +145,8 @@ hr {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   color: #fff;
-  background-color: #5ca9fb;
-  background-image: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background-color: #1b4332;
+  background-image: linear-gradient(to right, #2d6a4f 0%, #1b4332 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
   margin: 0;
@@ -184,7 +163,7 @@ hr {
 .btn-custom.active {
   color: #fff;
   background-image: none;
-  background-color: #6372ff;
+  background-color: #1b4332;
 }
 .btn:active,
 .btn.active {
@@ -208,7 +187,7 @@ a:focus,
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/intro-bg.jpg) center center no-repeat;
+  background: url(../img/Home.svg) center center no-repeat;
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -220,45 +199,35 @@ a:focus,
 }
 .intro h1 {
   font-family: "Raleway", sans-serif;
-  color: #fff;
-  font-size: 82px;
-  font-weight: 700;
+  color: white;
+  font-size: 70px;
+  font-weight: 800;
   text-transform: uppercase;
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 60px;
 }
 .intro h1 span {
   font-weight: 800;
   color: #5ca9fb;
 }
 .intro p {
-  color: #fff;
-  font-size: 22px;
-  font-weight: 300;
+  color: rgb(106, 102, 102);
+  font-size: 42px;
+  font-weight: 500;
   line-height: 30px;
   margin: 0 auto;
   margin-bottom: 60px;
 }
+
 header .intro-text {
-  padding-top: 350px;
-  padding-bottom: 200px;
+  margin-top: 350px;
+  margin-bottom: 200px;
   text-align: center;
 }
 /* Features Section */
 #features {
-  background: #f6f6f6;
-}
-#features i.fa {
-  font-size: 38px;
-  margin-bottom: 20px;
-  transition: all 0.5s;
-  color: #fff;
-  width: 100px;
-  height: 100px;
-  padding: 30px 0;
-  border-radius: 50%;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+  background: #fafafa;
+  
 }
 /* About Section */
 #about {
@@ -276,7 +245,7 @@ header .intro-text {
 #about h2::after {
   position: absolute;
   content: "";
-  background: linear-gradient(to right, #5ca9fb 0%, #6372ff 100%);
+  background: linear-gradient(to right, #2d6a4f 0%, #1b4332 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -310,49 +279,39 @@ header .intro-text {
 /* Services Section */
 #services {
   padding: 100px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  color: #fff;
+  background: linear-gradient(to right, #e9ecef 0%, #f8f9fa 100%);
+  color: #461b1b;
 }
-#services .service-desc {
-  margin: 10px 10px 20px;
-}
+
 #services h2 {
-  color: #fff;
+  color: #1b4332;
+  
 }
-#services .section-title h2::after {
+#services .section-title h3::after {
   position: absolute;
   content: "";
   background: rgba(255, 255, 255, 0.3);
   height: 4px;
   width: 60px;
   bottom: 0;
-  margin-left: -30px;
-  left: 50%;
+
 }
-#services i.fa {
-  font-size: 42px;
-  width: 120px;
-  height: 120px;
-  padding: 40px 0;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  border-radius: 50%;
-  color: #fff;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
-}
+ 
 #services h3 {
   font-weight: 500;
   padding: 5px 0;
-  color: #fff;
+  color: #1b4332;
 }
 #services p {
-  color: rgba(255, 255, 255, 0.75);
+  color: #1b4332;
 }
 #services .service-desc {
   margin-bottom: 40px;
 }
 /* Portfolio Section */
 #portfolio {
-  padding: 100px 0;
+  margin: 5rem;
+  background-color: #ffffff;
 }
 .portfolio-item {
   margin: 1px -15px 0 -14px;
@@ -390,12 +349,7 @@ header .intro-text {
   font-weight: 500;
   text-transform: uppercase;
 }
-.hover-bg:hover .hover-text > h4 {
-  opacity: 1;
-  -webkit-backface-visibility: hidden;
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
-}
+
 .hover-bg:hover .hover-text {
   opacity: 1;
 }
@@ -457,11 +411,12 @@ header .intro-text {
   padding: 10px 0 0;
   color: #888;
 }
-/* Contact Section */
+/* Contact Section 
+*/
 #contact {
+  margin-top: 60px;
   padding: 100px 0 60px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  color: rgba(255, 255, 255, 0.75);
+  color:#1b4332;
 }
 #contact .section-title {
   margin-bottom: 40px;
@@ -470,7 +425,7 @@ header .intro-text {
   font-size: 16px;
 }
 #contact h2 {
-  color: #fff;
+  color:#1b4332;
   margin-top: 10px;
   margin-bottom: 15px;
   padding-bottom: 15px;
@@ -485,7 +440,7 @@ header .intro-text {
   left: 30px;
 }
 #contact h3 {
-  color: #fff;
+  color:#1b4332;
   margin-top: 80px;
   margin-bottom: 25px;
   padding-bottom: 20px;
@@ -501,10 +456,10 @@ header .intro-text {
 #contact .btn-custom {
   margin: 30px 0;
   background: transparent;
-  border: 2px solid #fff;
+  border: 2px solid green;
 }
 #contact .btn-custom:hover {
-  color: #1f386e;
+  color: #1b4332;
   background: #fff;
 }
 label {
@@ -512,77 +467,7 @@ label {
   font-weight: 400;
   font-family: "Open Sans", sans-serif;
   float: left;
-}
-#contact .form-control {
-  display: block;
-  width: 100%;
-  padding: 6px 12px;
-  font-size: 16px;
-  line-height: 1.42857143;
-  color: #444;
-  background-color: #fff;
-  background-image: none;
-  border: 1px solid #ddd;
-  border-radius: 0;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-transition: none;
-  -o-transition: none;
-  transition: none;
-}
-#contact .form-control:focus {
-  border-color: #999;
-  outline: 0;
-  -webkit-box-shadow: transparent;
-  box-shadow: transparent;
-}
-.form-control::-webkit-input-placeholder {
-  color: #777;
-}
-.form-control:-moz-placeholder {
-  color: #777;
-}
-.form-control::-moz-placeholder {
-  color: #777;
-}
-.form-control:-ms-input-placeholder {
-  color: #777;
-}
-#contact .contact-item {
-  margin: 20px 0;
-}
-#contact .contact-item span {
-  color: rgba(255, 255, 255, 1);
-  margin-bottom: 10px;
-  display: block;
-}
-#contact .contact-item i.fa {
-  margin-right: 10px;
-}
-#contact .social {
-  border-top: 1px solid rgba(255, 255, 255, 0.15);
-  padding-top: 50px;
-  margin-top: 50px;
-  text-align: center;
-}
-#contact .social ul li {
-  display: inline-block;
-  margin: 0 20px;
-}
-#contact .social i.fa {
-  font-size: 22px;
-  width: 48px;
-  height: 48px;
-  padding: 12px 0;
-  border: 2px solid #fff;
-  color: #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-#contact .social i.fa:hover {
-  color: #608dfd;
-  background: #fff;
-}
+} 
 /* Footer Section*/
 #footer {
   background: #f6f6f6;
