--- a/public/css/style.css
+++ b/public/css/style.css
@@ -413,11 +413,13 @@ header .intro-text {
 }
 /* Contact Section 
 */
-#contact {
+#joindestail {
   margin-top: 60px;
   padding: 100px 0 60px;
+  margin: 0;
   color:#1b4332;
 }
+
 #contact .section-title {
   margin-bottom: 40px;
 }
