--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,7 @@ hr {
   width: 70px;
   text-align: center;
   position: relative;
-  background: #1e7a46;
+  background: #000000;
   margin-bottom: 20px;
   border: 0;
 }
@@ -63,13 +63,13 @@ hr {
   font-family: "Raleway", sans-serif;
   font-size: 24px;
   font-weight: 700;
-  color: #1b4332;
+  color: #000000;
   text-transform: uppercase;
 }
 #menu.navbar-default .navbar-nav > li > a {
   font-family: "Lato", sans-serif;
   text-transform: uppercase;
-  color: #1b4332;
+  color: #000000;
   font-size: 15px;
   font-weight: 400;
   padding: 8px 2px;
@@ -104,7 +104,7 @@ hr {
   bottom: -1px !important;
   width: 100% !important;
   height: 2px !important;
-  background: linear-gradient(to right,  #2d6a4f 0%, #1b4332 100%) !important;
+  background: linear-gradient(to right,  #2d6a4f 0%, #000000 100%) !important;
   content: "" !important;
   transition: width 0.2s !important;
 }
@@ -114,10 +114,10 @@ hr {
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background-color: #fff;
-  border-color: #1b4332;
+  border-color: #000000;
 }
 .navbar-default .navbar-toggle:hover > .icon-bar {
-  background-color: #1b4332;
+  background-color: #000000;
 }
 .section-title {
   margin-bottom: 70px;
@@ -131,7 +131,7 @@ hr {
 .section-title h2::after {
   position: absolute;
   content: "";
-  background: linear-gradient(to right,  #2d6a4f 0%, #1b4332 100%);
+  background: linear-gradient(to right,  #2d6a4f 0%, #000000 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -145,8 +145,8 @@ hr {
   font-family: "Raleway", sans-serif;
   text-transform: uppercase;
   color: #fff;
-  background-color: #1b4332;
-  background-image: linear-gradient(to right, #2d6a4f 0%, #1b4332 100%);
+  background-color: #000000;
+  background-image: linear-gradient(to right, #2d6a4f 0%, #000000 100%);
   padding: 14px 34px;
   letter-spacing: 1px;
   margin: 0;
@@ -163,7 +163,7 @@ hr {
 .btn-custom.active {
   color: #fff;
   background-image: none;
-  background-color: #1b4332;
+  background-color: #000000;
 }
 .btn:active,
 .btn.active {
@@ -245,7 +245,7 @@ header .intro-text {
 #about h2::after {
   position: absolute;
   content: "";
-  background: linear-gradient(to right, #2d6a4f 0%, #1b4332 100%);
+  background: linear-gradient(to right, #2d6a4f 0%, #000000 100%);
   height: 4px;
   width: 60px;
   bottom: 0;
@@ -284,7 +284,7 @@ header .intro-text {
 }
 
 #services h2 {
-  color: #1b4332;
+  color: #000000;
   
 }
 #services .section-title h3::after {
@@ -300,10 +300,10 @@ header .intro-text {
 #services h3 {
   font-weight: 500;
   padding: 5px 0;
-  color: #1b4332;
+  color: #000000;
 }
 #services p {
-  color: #1b4332;
+  color: #000000;
 }
 #services .service-desc {
   margin-bottom: 40px;
@@ -417,7 +417,7 @@ header .intro-text {
   margin-top: 60px;
   padding: 100px 0 60px;
   margin: 0;
-  color:#1b4332;
+  color:#000000;
 }
 
 #contact .section-title {
@@ -427,7 +427,7 @@ header .intro-text {
   font-size: 16px;
 }
 #contact h2 {
-  color:#1b4332;
+  color:#000000;
   margin-top: 10px;
   margin-bottom: 15px;
   padding-bottom: 15px;
@@ -442,7 +442,7 @@ header .intro-text {
   left: 30px;
 }
 #contact h3 {
-  color:#1b4332;
+  color:#000000;
   margin-top: 80px;
   margin-bottom: 25px;
   padding-bottom: 20px;
@@ -461,7 +461,7 @@ header .intro-text {
   border: 2px solid green;
 }
 #contact .btn-custom:hover {
-  color: #1b4332;
+  color: #000000;
   background: #fff;
 }
 label {
@@ -491,3 +491,4 @@ label {
     margin: 50px 0;
   }
 }
+
