--- a/src/components/pioxno.css
+++ b/src/components/pioxno.css
@@ -88,7 +88,10 @@ h4{
 
     border:solid  #000000 3px;
 }
-
+.buttoncart{
+    display: flex;
+    margin-right:"10px";
+}
 #JoinButton{
     color: #000000;
     border: 1px solid black;
@@ -217,16 +220,16 @@ padding: 10px;
 .careerBanner{
     width: 100%;
     height: auto;
-    padding: 60px;
-    margin-top: 90px;
+    padding: 30px;
+    margin-top: 110px;
     margin-bottom: 15px;
-    background: linear-gradient(to right, #000000 0%, #000000 100%);
+    background-color: #f5f5f5;
 }
 .careertagline{
     font-size: 50px;
     font-family: 'sans-serif';
     margin-bottom: 15px;
-    color: #f6f6f6;
+    color: #333;
  
 }
 .careerDesc{
