career and some other changes

--- a/src/components/pioxno.css
+++ b/src/components/pioxno.css
@@ -271,6 +271,14 @@ padding: 10px;
 a{
     color: #000000;
 }
+#logoD{
+
+        font-family: "Italiana", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+   
+      
+}
 #jobsearchTitle{
 color:#013915;
 font-family: sans-serif;
